To be honest, I can't remember most of the new changes. From what I can tell, I had already started working on the next task, then forgot to run git stash, and ended up making only the required changes for the current commit